# GPT

./: .gitignore  Cargo.toml  README.md
data/: bpe_merges.txt  chat_training_data_de.json  pretraining_data_de.json  tokenizer_merges.txt
src/: adam.rs  augmentation.rs  config.rs  corpus.rs  dataset_loader.rs  embeddings.rs  feed_forward.rs  feed_forward_geglu.rs  layer_norm.rs  layer_output_projection.rs  layer_pos_encoding.rs  layer_self_attention.rs  layer_time2vec.rs  layers.rs  lib.rs  llm.rs  main.rs  math.rs  multi_head_attention.rs  tokenize.rs  tokenizer_bpe.rs  train.rs  transformer.rs  transformer_block_v2.rs  utils.rs
