[package]
name = "llm"
version = "0.1.0"
# 2024 = latest edition
edition = "2024"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
# bincode 2.0 mit beiden Feature-Flags:
bincode   = { version = "2.0.1", features = ["derive", "serde"] }
# falls benötigt
ndarray   = { version = "0.15",  features = ["serde-1","blas"] }
anyhow    = "1.0"


rand = "0.9.2"
rand_distr = "0.5.0"
serde_json = "1.0"

csv = "1.3"
thiserror    = "1.0"                                      

[dev-dependencies]
# Add any test-specific dependencies here if needed

[lib]
name = "llm"
path = "src/lib.rs"

[[bin]]
name = "llm"
path = "src/main.rs"
